added a fullscreen modal for each project

--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -1,12 +1,12 @@
 [
   {
-    "name": "Inventory System",
-    "description": "Worked in an amazing team of three to develop from scratch a fully functional inventory system for Camosun College's Electronics Department.",
+    "name": "inventory system",
+    "description": "Worked in an amazing team of three to develop from scratch a fully functional inventory system for Camosun College's Electronics Department. Our solution simplified inventory management, enhanced tracking efficiency, and significantly improved overall departmental operations.",
     "link": "https://github.com/FelipeRuizM/inventory-system",
     "technologies": "Node.js Express.js React MySQL"
   },
   {
-    "name": "eCommerce Website",
+    "name": "e-commerce",
     "description": "An 'Amazon-like' website. It features a 'change currency' button, auto-complete addresses at checkout, Masonry Layout, and more.",  
     "link": "https://github.com/FelipeRuizM/ecommerce-website",
     "technologies": "JQuery Bootstrap"
@@ -18,21 +18,27 @@
     "technologies": "C# Unity"
   },
   {
-    "name": "Matryoshka Grid",
+    "name": "matryoshka grid",
     "description": "It's a local multiplayer Tic-Tac-Toe game with overlapping tokens. I thought the idea was original, but there's actually a game like that called Gobblet Gobblers.",
     "link": "https://github.com/FelipeRuizM/MatryoshkaGrid",
     "technologies": "JavaScript p5"
   },
   {
-    "name": "Tetris",
+    "name": "tetris",
     "description": "A recreation of the famous game Tetris. While creating this game, I had the opportunity to put into practice what I was learning during my C++ classes.",
     "link": "https://github.com/FelipeRuizM/tetris",
     "technologies": "C++ SFML"
   },
   {
-    "name": "ePortfolio",
+    "name": "e-portfolio",
     "description": "Are you asking yourself how I built this? Well, it's not a mystery since this is an open-source ePortfolio; you can check every line of code on my GitHub.",
     "link": "https://github.com/FelipeRuizM/e-portfolio",
+    "technologies": "React Node.js"
+  },
+  {
+    "name": "amazonian tiles",
+    "description": "Worked with Amazonian Tiles to create an clean and informative website",
+    "link": "https://github.com/FelipeRuizM/amazonian-tiles",
     "technologies": "React Node.js"
   }
 ]
