added content to eCommerce and Matryoshka modals

--- a/src/assets/data/projects.json
+++ b/src/assets/data/projects.json
@@ -1,15 +1,15 @@
 [
   {
-    "name": "inventory system",
+    "name": "Inventory System",
     "description": "Worked in an amazing team of three to develop from scratch a fully functional inventory system for Camosun College's Electronics Department. Our solution simplified inventory management, enhanced tracking efficiency, and significantly improved overall departmental operations.",
     "link": "https://github.com/FelipeRuizM/inventory-system",
     "technologies": "Node.js Express.js React MySQL"
   },
   {
-    "name": "e-commerce",
+    "name": "E-commerce",
     "description": "An 'Amazon-like' website. It features a 'change currency' button, auto-complete addresses at checkout, Masonry Layout, and more.",  
     "link": "https://github.com/FelipeRuizM/ecommerce-website",
-    "technologies": "JQuery Bootstrap"
+    "technologies": "jQuery Bootstrap"
   },
   {
     "name": "DCave",
@@ -18,26 +18,26 @@
     "technologies": "C# Unity"
   },
   {
-    "name": "matryoshka grid",
+    "name": "Matryoshka Grid",
     "description": "It's a local multiplayer Tic-Tac-Toe game with overlapping tokens. I thought the idea was original, but there's actually a game like that called Gobblet Gobblers.",
     "link": "https://github.com/FelipeRuizM/MatryoshkaGrid",
     "technologies": "JavaScript p5"
   },
   {
-    "name": "tetris",
+    "name": "Tetris",
     "description": "A recreation of the famous game Tetris. While creating this game, I had the opportunity to put into practice what I was learning during my C++ classes.",
     "link": "https://github.com/FelipeRuizM/tetris",
     "technologies": "C++ SFML"
   },
   {
-    "name": "e-portfolio",
+    "name": "E-portfolio",
     "description": "Are you asking yourself how I built this? Well, it's not a mystery since this is an open-source ePortfolio; you can check every line of code on my GitHub.",
     "link": "https://github.com/FelipeRuizM/e-portfolio",
     "technologies": "React Node.js"
   },
   {
-    "name": "amazonian tiles",
-    "description": "Worked with Amazonian Tiles to create an clean and informative website",
+    "name": "Amazonian Tiles",
+    "description": "I'm working with Amazonian Tiles to create an clean and informative website. This is still a work in progress so be patient with me.",
     "link": "https://github.com/FelipeRuizM/amazonian-tiles",
     "technologies": "React Node.js"
   }
